Use ProcessBuilder instead of Runtime.exec for Elasticsearch Process
Support redirect of STDIN and STDOUT.